--- a/.github/workflows/n2n_01x00_call-build-all.yml
+++ b/.github/workflows/n2n_01x00_call-build-all.yml
@@ -140,6 +140,7 @@ jobs:
     check-pushed:
         needs: [init-docker-tag]
         uses: ./.github/workflows/n2n_02x01_call-check-pushed.yml
+        secrets: inherit
         with:
             DOCKER_APP_NAME: ${{ inputs.DOCKER_APP_NAME }}
             DOCKER_TEST_TAG: ${{ needs.init-docker-tag.outputs.DOCKER_TEST_TAG }}
@@ -166,6 +167,7 @@ jobs:
     docker-n2n-build-test:
         needs: [check-init-version, init-docker-tag]
         uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
+        secrets: inherit
         with:
             VERSION_BIG: ${{ inputs.VERSION_BIG }}
             VERSION_SMALL: ${{ inputs.VERSION_SMALL }}
@@ -188,6 +190,7 @@ jobs:
         needs: [check-init-version, init-docker-tag, check-pushed]
         if: ${{ ! needs.check-pushed.outputs.SKIP_BUILD_PUSH }}
         uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
+        secrets: inherit
         with:
             VERSION_BIG: ${{ inputs.VERSION_BIG }}
             VERSION_SMALL: ${{ inputs.VERSION_SMALL }}
