fixbug: get-tag-last-pushed-info

--- a/.github/workflows/n2n_02x01_call-check-pushed.yml
+++ b/.github/workflows/n2n_02x01_call-check-pushed.yml
@@ -56,7 +56,7 @@ jobs:
               run: |
                   result="$(curl -k -sS https://hub.docker.com/v2/repositories/${{ secrets.REGISTRY_USERNAME }}/${{ inputs.DOCKER_APP_NAME }}/tags/${{ inputs.DOCKER_TEST_TAG }})"
 
-                  echo "${result}" >> $GITHUB_OUTPUT
+                  echo "result=${result}" >> $GITHUB_OUTPUT
 
             - name: Check tag-last-pushed-date
               id: check-tag-last-pushed-date
