--- a/.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
+++ b/.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
@@ -123,12 +123,15 @@ jobs:
               uses: docker/metadata-action@v4
               with:
                   images: ${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/${{ inputs.DOCKER_APP_NAME }}
+                  flavor: |
+                    prefix=${{ inputs.DOCKER_TAG_PREFIX }}, onlatest=true
+                    suffix=${{ inputs.DOCKER_TAG_SUFFIX }}, onlatest=true
                   tags: |
-                      type=raw,value=${{ inputs.DOCKER_TAG_PREFIX }}latest${{ inputs.DOCKER_TAG_SUFFIX }}, enable=${{ inputs.IS_LATEST_VERSION == 'true' }}
-                      type=raw,value=${{ inputs.DOCKER_TAG_PREFIX }}${{ inputs.VERSION_BIG }}${{ inputs.DOCKER_TAG_SUFFIX }}, enable=${{ inputs.VERSION_B_S_rC == inputs.VERSION_BIG }}
-                      type=raw,value=${{ inputs.DOCKER_TAG_PREFIX }}releases-${{ inputs.VERSION_BIG }}${{ inputs.DOCKER_TAG_SUFFIX }}, enable=${{ inputs.VERSION_B_S_rC == inputs.VERSION_BIG }}
-                      type=raw,value=${{ inputs.DOCKER_TAG_PREFIX }}${{ inputs.VERSION_B_S_rC }}${{ inputs.DOCKER_TAG_SUFFIX }}, enable=${{ inputs.VERSION_B_S_rC != inputs.VERSION_BIG }}
-                      type=raw,value=${{ inputs.DOCKER_TAG_PREFIX }}${{ format( 'v.{1}_r{2}', inputs.VERSION_SMALL, inputs.VERSION_B_S_rC ) }}${{ inputs.DOCKER_TAG_SUFFIX }}, enable=${{ inputs.VERSION_B_S_rC != inputs.VERSION_BIG }}
+                      type=raw,value=latest, enable=${{ inputs.IS_LATEST_VERSION == 'true' }}
+                      type=raw,value=${{ inputs.VERSION_BIG }}, enable=${{ inputs.VERSION_B_S_rC == inputs.VERSION_BIG }}
+                      type=raw,value=releases-${{ inputs.VERSION_BIG }}, enable=${{ inputs.VERSION_B_S_rC == inputs.VERSION_BIG }}
+                      type=raw,value=${{ inputs.VERSION_B_S_rC }}, enable=${{ inputs.VERSION_B_S_rC != inputs.VERSION_BIG }}
+                      type=raw,value=${{ format( 'v.{1}_r{2}', inputs.VERSION_SMALL, inputs.VERSION_B_S_rC ) }}, enable=${{ inputs.VERSION_B_S_rC != inputs.VERSION_BIG }}
                   labels: |
                       org.opencontainers.image.version=${{ inputs.VERSION_B_S_rC }}
 
