--- a/.github/workflows/n2n_01x00_call-build-all.yml
+++ b/.github/workflows/n2n_01x00_call-build-all.yml
@@ -183,6 +183,38 @@ jobs:
                   LOG_INFO "LAST_PULLED_DATE: ${{ needs.check-pushed.outputs.LAST_PULLED_DATE }}"
                   LOG_INFO "BUILD_PUSH: ${{ needs.check-pushed.outputs.BUILD_PUSH }}"
 
+    check-all-docker-n2n-build-test-publish:
+        needs: [check-init-version, init-docker-tag, check-pushed]
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
+            # This is used to complete the identity challenge
+            # with sigstore/fulcio when running outside of PRs.
+            id-token: write
+        steps:
+            - name: Check outputs check-pushed
+              run: |
+                  LOG_INFO() {
+                      echo -e $(caller) "\033[0;32m[    INFO] $@ \033[0m"
+                  }
+                  LOG_INFO 'VERSION_BIG: ${{ inputs.VERSION_BIG }}'
+                  LOG_INFO 'VERSION_SMALL: ${{ inputs.VERSION_SMALL }}'
+                  LOG_INFO 'VERSION_COMMIT: ${{ inputs.VERSION_COMMIT }}'
+                  LOG_INFO 'VERSION_B_S_rC: ${{ inputs.VERSION_B_S_rC }}'
+                  LOG_INFO 'STR_OS_ARCHS: ${{ inputs.STR_OS_ARCHS }}'
+                  LOG_INFO 'STR_DOWNLOAD_URLS: ${{ inputs.STR_DOWNLOAD_URLS }}'
+                  LOG_INFO 'DOCKER_CONTEXT_PATH: ${{ inputs.DOCKER_APP_NAME }}'
+                  LOG_INFO 'DOCKER_APP_NAME: ${{ inputs.DOCKER_APP_NAME }}'
+                  LOG_INFO 'DOCKER_TAG_PREFIX: ${{ inputs.DOCKER_TAG_PREFIX }}'
+                  LOG_INFO 'DOCKER_TAG_SUFFIX: ${{ inputs.DOCKER_TAG_SUFFIX }}'
+                  LOG_INFO 'DOCKER_BUILD_PLATFORMS: ${{ inputs.DOCKER_BUILD_PLATFORMS }}'
+                  LOG_INFO 'DOCKER_BUILD_DOCKERFILE: ${{ needs.check-init-version.outputs.DOCKER_BUILD_DOCKERFILE }}'
+                  LOG_INFO 'DOCKER_TEST_TAG: ${{ needs.init-docker-tag.outputs.DOCKER_TEST_TAG }}'
+                  LOG_INFO 'IS_LATEST_VERSION: ${{ needs.check-init-version.outputs.IS_LATEST_VERSION }}'
+                  LOG_INFO 'DOCKER_BUILD_CACHE_TAG: ${{ needs.check-init-version.outputs.DOCKER_BUILD_CACHE_TAG }}'
+                  LOG_INFO 'DOCKER_PUSH: ${{ true }}'
+
     docker-n2n-build-test:
         needs: [check-init-version, init-docker-tag]
         uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
