--- a/.github/workflows/n2n_02x01_call-check-pushed.yml
+++ b/.github/workflows/n2n_02x01_call-check-pushed.yml
@@ -66,14 +66,14 @@ jobs:
                   }
                   result=${{ steps.get-tag-last-pushed-info.outputs.result }}
                   LOG_INFO "result: ${result}"
-                  if [[ -n "${{ steps.get-tag-last-pushed-info.outputs.result.errinfo }}" ]]; then
+                  if [[ "${{ contains( steps.get-tag-last-pushed-info.outputs.result , 'errinfo' ) }}" == 'true' ]]; then
                     LOG_WARNING '获取失败: ${{ steps.get-tag-last-pushed-info.outputs.result }}'
                     LOG_INFO "准备 编译/推送"
                     echo "BUILD_PUSH=true" >> $GITHUB_OUTPUT
                     exit 0
                   fi
                   # e.g. "2022-10-30T19:29:49.877019Z"
-                  last_pulled_date=${{ steps.get-tag-last-pushed-info.outputs.result.last_updated }}
+                  last_pulled_date=${{ toJson(fromJson(steps.get-tag-last-pushed-info.outputs.result).last_updated) }}
                   echo "LAST_PULLED_DATE=${last_pulled_date}" >> $GITHUB_OUTPUT
                   LOG_INFO "check tag - ${{ secrets.REGISTRY_USERNAME }}/${{ inputs.DOCKER_APP_NAME }}:${{ inputs.DOCKER_TEST_TAG }}"
                   LOG_INFO "last_pulled_date - ${last_pulled_date}"
@@ -82,7 +82,7 @@ jobs:
                       LOG_WARNING "强制 编译/推送"
                       echo "BUILD_PUSH=true" >> $GITHUB_OUTPUT
                       exit 0
-                  elif [[ "${last_pulled_date,,}" != "null" ]]; then
+                  elif [[ -n "${last_pulled_date}" || "${last_pulled_date,,}" != "null" ]]; then
                       echo "BUILD_PUSH=false" >> $GITHUB_OUTPUT
                       LOG_INFO "跳过 编译/推送"
                       exit 0
